# UniSpySDK

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  SDK-VC.sln  SDK-VCX.sln  SDK-VS2008.sln  _merge notes.txt  appveyor.yml  dllmain.c  revolution.mak
Chat/: CMakeLists.txt  Chat.vcproj  Chat.vcxproj  Chat.vcxproj.filters  changelog.txt  chat.h  chatASCII.h  chatCallbacks.c  chatCallbacks.h  chatChannel.c  chatChannel.h  chatCrypt.c  chatCrypt.h  chatHandlers.c  chatHandlers.h  chatMain.c  chatMain.h  chatSocket.c  chatSocket.h
Chat/chatc/: CMakeLists.txt  chatc.c  chatc.vcproj  chatc.vcxproj
Chat/chatty/: CMakeLists.txt  ChannelListDlg.cpp  ChannelListDlg.h  ChannelModeDlg.cpp  ChannelModeDlg.h  ChildFrm.cpp  ChildFrm.h  ConnectDlg.cpp  ConnectDlg.h  EnterDlg.cpp  EnterDlg.h  GetUserInfoDlg.cpp  GetUserInfoDlg.h  KickReasonDlg.cpp  KickReasonDlg.h  MainFrm.cpp  MainFrm.h  SendRawDlg.cpp  SendRawDlg.h  SetPasswordDlg.cpp  SetPasswordDlg.h  SetTopicDlg.cpp  SetTopicDlg.h  StdAfx.cpp  StdAfx.h  TalkDlg.cpp  TalkDlg.h  chatty.cpp  chatty.h  chatty.vcproj  chatty.vcxproj  chatty.vcxproj.filters  chattyDoc.cpp  chattyDoc.h  chattyView.cpp  chattyView.h  resource.h
Direct2Game/: CMakeLists.txt  Direct2Game.h  changelog.txt  d2gDeserialize.c  d2gDeserialize.h  d2gDownloads.c  d2gDownloads.h  d2gMain.c  d2gMain.h  d2gServices.c  d2gServices.h  d2gUtil.c  d2gUtil.h
Direct2Game/Direct2GameTest/: CMakeLists.txt  d2gtest.c
GP/: CMakeLists.txt  GP.vcproj  GP.vcxproj  GP.vcxproj.filters  changelog.txt  gp.c  gp.h  gpi.c  gpi.h  gpiBuddy.c  gpiBuddy.h  gpiBuffer.c  gpiBuffer.h  gpiCallback.c  gpiCallback.h  gpiConnect.c  gpiConnect.h  gpiInfo.c  gpiInfo.h  gpiKeys.c  gpiKeys.h  gpiOperation.c  gpiOperation.h  gpiPS3.c  gpiPS3.h  gpiPeer.c  gpiPeer.h  gpiProfile.c  gpiProfile.h  gpiSearch.c  gpiSearch.h  gpiTransfer.c  gpiTransfer.h  gpiUnique.c  gpiUnique.h  gpiUtility.c  gpiUtility.h  revolution.mak
GP/gpstress/: CMakeLists.txt  gpstress.c  gpstress.vcproj  gpstress.vcxproj  gpstress.vcxproj.filters
GP/gptest/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  gptest.cpp  gptest.h  gptest.rc  gptest.vcproj  gptest.vcxproj  gptest.vcxproj.filters  gptestDlg.cpp  gptestDlg.h  resource.h
GP/gptestc/: CMakeLists.txt  gptestc.c  gptestc.vcproj  gptestc.vcxproj  gptestc.vcxproj.filters
Peer/: CMakeLists.txt  Peer.vcproj  Peer.vcxproj  Peer.vcxproj.filters  changelog.txt  peer.h  peerAscii.h  peerAutoMatch.c  peerAutoMatch.h  peerCallbacks.c  peerCallbacks.h  peerGlobalCallbacks.c  peerGlobalCallbacks.h  peerHost.c  peerHost.h  peerKeys.c  peerKeys.h  peerMain.c  peerMain.h  peerMangle.c  peerMangle.h  peerOperations.c  peerOperations.h  peerPing.c  peerPing.h  peerPlayers.c  peerPlayers.h  peerQR.c  peerQR.h  peerRooms.c  peerRooms.h  peerSB.c  peerSB.h
RetroSpy/: CMakeLists.txt  RetroSpy.vcxproj  RetroSpy.vcxproj.filters  dllmain.c
Voice2/: CMakeLists.txt  Voice2.vcproj  Voice2.vcxproj  Voice2.vcxproj.filters  changelog.txt  gv.h  gvCodec.c  gvCodec.h  gvCustomDevice.c  gvCustomDevice.h  gvDevice.c  gvDevice.h  gvDirectSound.c  gvFrame.c  gvFrame.h  gvGSM.c  gvLogitechPS2Codecs.c  gvMain.c  gvMain.h  gvOSXAudio.c  gvPS2Eyetoy.c  gvPS2Spu2.c  gvPS3Headset.c  gvPSPAudio.c  gvSource.c  gvSource.h  gvSpeex.c  gvSpeex.h  gvSpeexSpu.c  gvUtil.c  gvUtil.h  winerrordxgi.h
common/: CMakeLists.txt  changelog-sharedcode.txt  changelog.txt  darray.c  darray.h  gsAssert.c  gsAssert.h  gsAvailable.c  gsAvailable.h  gsCommon.h  gsCore.c  gsCore.h  gsCrypt.c  gsCrypt.h  gsDebug.c  gsDebug.h  gsLargeInt.c  gsLargeInt.h  gsMemory.c  gsMemory.h  gsPlatform.c  gsPlatform.h  gsPlatformSocket.c  gsPlatformSocket.h  gsPlatformThread.c  gsPlatformThread.h  gsPlatformUtil.c  gsPlatformUtil.h  gsRC4.c  gsRC4.h  gsResultCodes.c  gsResultCodes.h  gsSHA1.c  gsSHA1.h  gsSSL.c  gsSSL.h  gsSoap.c  gsSoap.h  gsStringUtil.c  gsStringUtil.h  (+12 more)
gcdkey/: CMakeLists.txt  changelog.txt  gcdkey.vcproj  gcdkey.vcxproj  gcdkey.vcxproj.filters  gcdkeyc.c  gcdkeyc.h  gcdkeys.c  gcdkeys.h
ghttp/: CMakeLists.txt  changelog.txt  ghttp.h  ghttp.vcproj  ghttp.vcxproj  ghttp.vcxproj.filters  ghttpASCII.h  ghttpBuffer.c  ghttpBuffer.h  ghttpCallbacks.c  ghttpCallbacks.h  ghttpCommon.c  ghttpCommon.h  ghttpConnection.c  ghttpConnection.h  ghttpEncryption.c  ghttpEncryption.h  ghttpMain.c  ghttpMain.h  ghttpPost.c  ghttpPost.h  ghttpProcess.c  ghttpProcess.h  ghttpSoap.c  ghttpSoap.h  revolution.mak
gstats/: CMakeLists.txt  gbucket.c  gstats.c  gstats.vcproj  gstats.vcxproj  gstats.vcxproj.filters
gt2/: CMakeLists.txt  changelog.txt  gt2.h  gt2.vcproj  gt2.vcxproj  gt2.vcxproj.filters  gt2Auth.c  gt2Auth.h  gt2Buffer.c  gt2Buffer.h  gt2Callback.c  gt2Callback.h  gt2Connection.c  gt2Connection.h  gt2Encode.c  gt2Encode.h  gt2Filter.c  gt2Filter.h  gt2Main.c  gt2Main.h  gt2Message.c  gt2Message.h  gt2Socket.c  gt2Socket.h  gt2Utility.c  gt2Utility.h
natneg/: CMakeLists.txt  NATify.c  NATify.h  changelog.txt  natneg.c  natneg.h  natneg.vcproj  natneg.vcxproj  natneg.vcxproj.filters  nninternal.h
qr2/: CMakeLists.txt  changelog.txt  qr2.c  qr2.h  qr2.vcproj  qr2.vcxproj  qr2.vcxproj.filters  qr2regkeys.c  qr2regkeys.h
sake/: CMakeLists.txt  changelog.txt  sake.h  sake.vcproj  sake.vcxproj  sakeMain.c  sakeMain.h  sakeRequest.c  sakeRequest.h  sakeRequestInternal.h  sakeRequestMisc.c  sakeRequestModify.c  sakeRequestRead.c
sc/: CMakeLists.txt  changelog.txt  sc.h  sc.vcproj  sc.vcxproj  sc.vcxproj.filters  sci.h  sciInterface.c  sciInterface.h  sciMain.c  sciReport.c  sciReport.h  sciSerialize.c  sciSerialize.h  sciWebServices.c  sciWebServices.h
serverbrowsing/: CMakeLists.txt  changelog.txt  sb_ascii.h  sb_crypt.c  sb_crypt.h  sb_internal.h  sb_queryengine.c  sb_server.c  sb_serverbrowsing.c  sb_serverbrowsing.h  sb_serverlist.c  serverbrowsing.vcproj  serverbrowsing.vcxproj  serverbrowsing.vcxproj.filters
sharedDll/: CMakeLists.txt  dllmain.c
webservices/: AuthService.c  AuthService.h  CMakeLists.txt  RacingService.c  RacingService.h  webservices.vcproj  webservices.vcxproj  webservices.vcxproj.filters
(+525 files in other folders)
