cmake_minimum_required(VERSION 3.0.0)

add_library(rsgp
    gp.c
    gpi.c
    gpiBuddy.c
    gpiBuffer.c
    gpiCallback.c
    gpiConnect.c
    gpiInfo.c
    gpiKeys.c
    gpiOperation.c
    gpiPeer.c
    gpiProfile.c
    gpiPS3.c
    gpiSearch.c
    gpiTransfer.c
    gpiUnique.c
    gpiUtility.c
)
